--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_native_splash: ^2.4.6
   cupertino_icons: ^1.0.6
   morphable_shape: ^2.0.0
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
