--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   morphable_shape: ^2.0.0
   file_picker: ^8.1.2
+  supabase_flutter: ^2.8.0
 
 dev_dependencies:
   flutter_test:
