--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   morphable_shape: ^2.0.0
   file_picker: ^8.1.2
   supabase_flutter: ^2.8.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +34,7 @@ flutter:
   
   assets:
     - assets/images/
+    - .env
 
 flutter_native_splash:
   # Background color using the app's primary theme
